fix: make code readable

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -331,9 +331,9 @@ footer {
   text-align: justify;
 }
 
-.blog-body code {
-  background-color: lightgray;
-  padding: 4px 6px;
+.blog-body code,.jupyter-blog-body code {
+  font-size: 1.2em;
+  padding: 0 4px;
 }
 
 .blog-body pre {
